tests/fail/comparison_ordering_struct.cz
// Test: Cannot use ordering operators on struct types
// Should error with ordering operator on non-numeric types

struct Point {
    i32 x
    i32 y
}

fn main() i32 {
    Point p1 = Point { x: 1, y: 2 }
    Point p2 = Point { x: 3, y: 4 }
    
    // Should error: ordering operators require numeric types
    bool result = (p1 < p2)
    
    return 0
}
